cambiamos a color success título sobre nosotros

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -46,8 +46,19 @@
             </div>
         </nav>
     </header>
-    <main>
-
+    <main class="container my-5">
+        <section>
+        <h1 class="display-1 text-center"> Nuestra historia</h1>
+        <article class="row">
+            <aside class="col-12 col-md-6">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, sint. Laudantium dolore soluta reiciendis maiores? Doloribus in excepturi distinctio modi ratione ab ipsa cum repellendus a velit asperiores possimus accusamus suscipit impedit esse aliquam rerum quis et iste, architecto hic perspiciatis soluta. Asperiores necessitatibus voluptatibus odio aliquid. Quisquam inventore a vero debitis eaque nam reprehenderit maiores sapiente obcaecati ut sunt commodi ab quasi optio aperiam libero doloribus corrupti non culpa saepe, distinctio laboriosam vitae possimus tenetur. Est, explicabo! Dolore officia molestiae provident aut nisi suscipit, sapiente, excepturi tempora perspiciatis, quaerat dolores inventore iusto. Necessitatibus autem harum dolorum minima aliquid impedit quam similique iure repudiandae. Ratione esse quaerat unde laborum, facere temporibus facilis dolor laboriosam obcaecati magni error, labore eius autem cum possimus maxime fuga quos quidem, nemo corrupti rerum. Quod corporis molestias quasi recusandae fugiat labore nostrum. Error in harum nulla? Sunt placeat quis cupiditate pariatur hic ullam assumenda enim.
+                </p>
+            </aside>
+            <aside class="col-12 col-md-6">
+                    <img src="../img/historia.png" alt="historia" class="w-100">
+            </aside>
+        </article>
+    </section>
 
     </main>
 
